optimize: 精简simple-starter依赖;修复socketio.html测试页;